--- a/FrontEnd/ECommerce.Web/Views/Shared/_Layout.cshtml
+++ b/FrontEnd/ECommerce.Web/Views/Shared/_Layout.cshtml
@@ -38,6 +38,26 @@
                             </ul>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Auth" asp-action="Login">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Auth" asp-action="Register">Register</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Hello @User.Identity.Name</a> @* Olusturulan kimlik ve identity yardimiyla kullanicinin adini cekiyoruz *@
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Auth" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
