--- a/FrontEnd/ECommerce.Web/Views/Auth/Login.cshtml
+++ b/FrontEnd/ECommerce.Web/Views/Auth/Login.cshtml
@@ -1,27 +1,27 @@
 ﻿@model LoginRequestDTO
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Giriş";
 }
 
 <form method="post">
     <div class="row text-center">
-        <h1>Login</h1>
+        <h1>Giriş Yap</h1>
     </div>
     <div class="row text-center">
         <div asp-validation-summary="All" class="text-danger"></div>
     </div>
     <div class="row">
         <div class="col-12 col-md-6 offset-md-3 pb-2">
-            <input asp-for="UserName" class="form-control" placeholder="Username..." />
+            <input asp-for="UserName" class="form-control" placeholder="Kullanıcı Adı..." />
             <span asp-validation-for="UserName" class="text-danger" />
         </div>
         <div class="col-12 col-md-6 offset-md-3 pb-2">
-            <input asp-for="Password" class="form-control" placeholder="Password..." />
+            <input asp-for="Password" class="form-control" placeholder="Parola..." />
             <span asp-validation-for="Password" class="text-danger" />
         </div>
         <div class="col-12 col-md-6 offset-md-3 pb-2">
-           <button type="submit" class="form-control btn btn-success" value="Submit">Login</button>
+           <button type="submit" class="form-control btn btn-success" value="Submit">Giriş</button>
         </div>
     </div>
 </form>
