--- a/FrontEnd/ECommerce.Web/Views/Cart/CartIndex.cshtml
+++ b/FrontEnd/ECommerce.Web/Views/Cart/CartIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CartDTO
 
 @{
-    ViewData["Title"] = "Shopping Cart";
+    ViewData["Title"] = "Sepetim";
 }
 
 @if (Model.CartHeader != null && Model.CartDetails?.Count() > 0)
@@ -14,10 +14,10 @@
             <div class="card border mt-4 container">
                 <div class="card-header bg-dark text-light ml-0 row ">
                     <div class="col-6">
-                        <h3 class="text-success"><i class="bi bi-cart"></i> &nbsp; Shopping Cart</h3>
+                        <h3 class="text-success"><i class="bi bi-cart"></i> &nbsp; Sepetim</h3>
                     </div>
                     <div class="col-6 text-end">
-                        <a asp-action="Index" asp-controller="Home" class="btn btn-outline-warning mt-2 btn-sm">Continue Shopping</a>
+                        <a asp-action="Index" asp-controller="Home" class="btn btn-outline-warning mt-2 btn-sm">Alışverişe Devam Et</a>
                     </div>
                 </div>
                 <div class="card-body">
@@ -26,13 +26,13 @@
                             <div class="col-lg-2">
                             </div>
                             <div class="col-lg-5">
-                                Product Details
+                                Ürün Detayları
                             </div>
                             <div class="col-lg-2">
-                                Price
+                                Fiyat
                             </div>
                             <div class="col-lg-2">
-                                Count
+                                Adet
                             </div>
                             <div class="col-lg-1">
                             </div>
@@ -68,32 +68,32 @@
                         <div class="col-6">
                             @if (string.IsNullOrEmpty(Model.CartHeader.CouponCode))
                             {
-                                <span>Coupon:</span>
+                                <span>Kupon:</span>
                                 <input asp-for="CartHeader.CouponCode" />
-                                <button type="submit" asp-action="ApplyCoupon" class="btn btn-sm btn-success"> Apply </button>
+                                <button type="submit" asp-action="ApplyCoupon" class="btn btn-sm btn-success"> Uygula </button>
                             }
                             else
                             {
-                                <span>Coupon:</span>
+                                <span>Kupon:</span>
                                 <input asp-for="CartHeader.CouponCode" disabled />
-                                <button type="submit" asp-action="RemoveCoupon" class="btn btn-sm btn-success"> Remove </button>
+                                <button type="submit" asp-action="RemoveCoupon" class="btn btn-sm btn-success"> Kaldır </button>
                             }
                         </div>
                         <div class="col-6 text-end">
-                            <span class="text-danger" style="font-size:21px;">  Order Total :  @string.Format("{0:c}", Model.CartHeader.CartTotal)  <br /></span>
+                            <span class="text-danger" style="font-size:21px;">  Sipariş Toplamı :  @string.Format("{0:c}", Model.CartHeader.CartTotal)  <br /></span>
                             @if (Model.CartHeader.Discount > 0)
                             {
-                                <span class="text-success"> Order Discount :   @string.Format("{0:c}", Model.CartHeader.Discount) </span>
+                                <span class="text-success"> Sipariş İndirimi :   @string.Format("{0:c}", Model.CartHeader.Discount) </span>
                             }
                         </div>
                     </div>
                 </div>
                 <div class="card-footer row">
                     <div class="col-6 col-md-3 ">
-                        <button type="submit" class="btn btn-outline-danger form-control"> Email Cart </button>
+                        <button type="submit" class="btn btn-outline-danger form-control"> <i class="bi bi-envelope"></i> Bilgi </button>
                     </div>
                     <div class="col-6 col-md-3 offset-md-6">
-                        <button disabled class="btn btn-success form-control"> Checkout (Comming Soon!) </button>
+                        <button disabled class="btn btn-success form-control"> Ödeme </button>
                     </div>
                 </div>
             </div>
@@ -103,6 +103,6 @@
 else
 {
     <div>
-        <p>Please add items to cart.</p>
+        <p>Sepetiniz boş. Lütfen sepetinize ürün ekleyin.</p>
     </div>
 }
