--- a/FrontEnd/ECommerce.Web/Views/Home/ProductDetails.cshtml
+++ b/FrontEnd/ECommerce.Web/Views/Home/ProductDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductDTO
 @{
-    ViewData["Title"] = "Product Details";
+    ViewData["Title"] = "Ürün Detayları";
 }
 
 <form method="post">
@@ -20,7 +20,7 @@
                 <div class="container rounded p-2">
                     <div class="row">
                         <div class="col-12 col-lg-4 p-1 text-center">
-                            <img src="@Model.ImageUrl" style="border-radius:35px;" width="100%" class="rounded" />
+                            <img src="@Model.ImageUrl" style="border-radius:35px;" width="100%" height="300px" class="rounded" />
                         </div>
                         <div class="col-12 col-lg-8">
                             <div class="row pl-3">
@@ -40,10 +40,10 @@
             </div>
             <div class="card-footer row bg-dark">
                 <div class="col-12 col-md-6 pb-1 ">
-                    <a asp-action="Index" class="btn btn-success btn-square form-control btn-lg" style="height:50px;">Back to List</a>
+                    <a asp-action="Index" class="btn btn-success btn-square form-control btn-lg" style="height:50px;">Listeye Geri Dön</a>
                 </div>
                 <div class="col-12 col-md-6 ">
-                    <button type="submit" class="btn btn-primary form-control btn-lg" style="height:50px;">Add to Cart</button>
+                    <button type="submit" class="btn btn-primary form-control btn-lg" style="height:50px;">Sepete Ekle</button>
                 </div>
             </div>
         </div>
